Fix width of search box in the personalize modal. It was misaligned when a scroll bar appeared.

--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_personalize_views_editor.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_personalize_views_editor.scss
@@ -112,6 +112,11 @@ $icon-color: #647984;
   height:        40px;
 }
 
+.filter.personalize-editor {
+  display:   flex;
+  flex-grow: 1;
+}
+
 .filter-name {
   border:        0;
   padding:       0;
